Bug 694758 - Segmentation fault
Summary: Segmentation fault
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 9.10
Hardware: PC Linux
: P4 normal
Assignee: Ken Sharp
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-06 07:29 UTC by punknroll
Modified: 2013-11-08 09:58 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
the pdf that causes the segfault (3.52 MB, application/pdf)
2013-11-06 07:30 UTC, punknroll
Details

Note You need to log in before you can comment on or make changes to this bug.
Description punknroll 2013-11-06 07:29:21 UTC
I get a segmentation fault using this command:

gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/ebook -dNOPAUSE -dBATCH -sOutputFile=test.pdf seg1.pdf

The segementation fault disappears when I add -dNOTRANSPARENCY but then the images (which were PNG-files) look ugly.

Thanx for help.
Andi
Comment 1 punknroll 2013-11-06 07:30:49 UTC
Created attachment 10374 [details]
the pdf that causes the segfault
Comment 2 punknroll 2013-11-06 07:59:21 UTC
I just found out that

-dDownsampleColorImages=true \

causes the problem.
Comment 3 Ken Sharp 2013-11-08 09:58:29 UTC
This commit : 1cb2458772321dc86117cb45b5b28a1423ccf9b7 fixes the problem for me but I'm a little concerned that it is simply masking a deeper problem. If you still get the same result with other files please reopen the bug and attach a new failing file.